# fasthtml-digital-ocean

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
.github/workflows/test/.github/workflows/: foo.yml
