[tool.poetry]
name = "fasthtml-digital-ocean"
version = "0.1.0"
description = ""
authors = ["You 👈  <you@gmail.com>"]
readme = "README.md"
packages = [{include = "fasthtml_digital_ocean"}]

[tool.poetry.dependencies]
python = "^3.10"
python-fasthtml = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
